llmgoat/static/style.css
/* ... */
.sidebar-nav h2 {
    font-size: xxx-large;
    font-weight: normal;
    text-align: center;
}

.sidebar-nav .icon {
  width: 0.5em;
  height: 0.5em;
  flex-shrink: 0;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  padding-left: 1rem;
}

.sidebar-nav a {
  color: white;
  text-decoration: none;
  display: flex;
  gap: 0.3em;
  align-items: center;
}

.sidebar-nav li.current .icon {
  background-image: url("/static/icons/selected.svg");
}

.sidebar-nav li.completed .icon {
  background-image: url("/static/icons/solved.svg");
}

.sidebar-nav li.completed .title {
  text-decoration: line-through;
}

.sidebar-nav ul {
  list-style-type: none;
  list-style: none;
  padding: 0;
  margin: 0;
  
}

.sidebar-nav li {
  margin: 0.5rem 0;
}

.sidebar-nav a:hover {
  text-decoration: underline;
}

/* Model selection */
.model-box {
  background-color: #ffda00; 
  margin: auto auto 1em auto;
  width: 200px;
  aspect-ratio: 300 / 83;
  clip-path: polygon(
    12px 0%,
    calc(100% - 12px) 0%,
    100% 12px,
    100% calc(100% - 12px),
    calc(100% - 12px) 100%,
    12px 100%,
    0% calc(100% - 12px),
    0% 12px);
}

.model-inner-box {
  padding: 0.5rem;
  height: calc(100% - 1rem);
  width: calc(85% - 1rem);
  margin:auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.model-title {
  margin: 0 0 0.2em;
  color: black;
  font-size: 1.4rem;
  font-weight: normal;
}

.model-box select {
  background: white;
  color: #1f48f2;
  border: 2px solid #ccc;
  border-radius: 0.3em;
  font-family: inherit;
  font-size: 1.4rem;
  height: 1.2em;
  text-align-last: center;
  cursor: pointer;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.model-box select option {
  text-align: center;
  font-size: 1.4rem;
}

@-moz-document url-prefix() {
  .model-box select option {
    font-size: 1rem; /* Firefox does not allow to set the font-family for select options so it looks bigger than it should be */
  }
}

/* challenge side (right) */

.main-content-wrapper {
  flex: 1;
  display: flex;
  flex-direction: column;
  padding: 2rem 2rem 0 2rem;
  margin-left: 335px;
}

.main-content {
  flex: 1;
  position: relative;
  display: flex;
  flex-direction: column;
  line-height: 1.6rem;
}

.description-box {
  display: flex;
  gap: 12px;
  justify-content: center;
}

.line-col {
  width: 12px;
  background-image: url("/static/icons/vertical-line.svg");
  background-repeat: no-repeat;
  background-position: center top;
  background-size: contain;
}

.content {
  margin-bottom: 10px;
}

.content h2.title {
  font-weight: normal;
  margin-top: 10px;
  margin-bottom: 10px;
}
.content p {
  margin: 8px 0;
}

mark {
  background-color: black;
  color:white;
  padding: 0.15em 0.2em 0.02em 0.2em;
}

.button {
  margin-right: 20px;
  padding: 0.7rem 1rem 0.4rem 1rem;
  background-color: #1f42f2;
  color: white;
  border: none;
  font-family: inherit;
  font-size: inherit;
  cursor: pointer;
  text-decoration: none;
  clip-path: polygon(
    5px 0%,                 /* top-left */
    calc(100% - 5px) 0%,    /* top-right */
    100% 5px,
    100% calc(100% - 5px),
    calc(100% - 5px) 100%,
    5px 100%,
    0% calc(100% - 5px),
    0% 5px);
}

.button:link,
.button:visited,
.button:hover,
.button:active {
  color: white;
  text-decoration: none;
}

.main-footer {
  text-align: center;
  padding-bottom: 2rem;
}

/* solved overlay styles */
#solved-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.8);
    filter: 0 1px 1px rgb(0 0 0 / 0.05);
    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
    display: none;
    justify-content: center;
    align-items: center;
    z-index: 9998;
}

.solved-content {
    width: 400px;
    height: 250px;
    background-color: #1f48f2;
    color: white;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
    clip-path: polygon(
      10px 0%,
      calc(100% - 10px) 0%,
      100% 10px,
      100% calc(100% - 10px),
      calc(100% - 10px) 100%,
      10px 100%,
      0% calc(100% - 10px),
      0% 10px
    );
}

.solved-content h2 {
    font-size: xx-large;
    font-weight: normal;
    margin-bottom: 0.5rem;
}

.solved-goat {
    width: 150px;
    height: auto;
    margin-bottom: 0.5rem;
}

.solved-ok-btn {
    background-color: #ffda00;
    border: none;
    padding: 0.25rem 0.5rem;
    font-size: 0.85rem;
    cursor: pointer;
    clip-path: polygon(
      5px 0%,
      calc(100% - 5px) 0%,
      100% 5px,
      100% calc(100% - 5px),
      calc(100% - 5px) 100%,
      5px 100%,
      0% calc(100% - 5px),
      0% 5px);
}
.solved-ok-btn:hover {
    background-color: #eeca01;
}

/* waiting overlay styles */
#waiting-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.8);
    display: none;
    justify-content: center;
    align-items: center;
    z-index: 9999;
    filter: 0 1px 1px rgb(0 0 0 / 0.05);
    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
}

.waiting-content {
    width: 400px;
    height: 250px;
    background-color: #1f48f2;
    color: white;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
    clip-path: polygon(
      10px 0%,
      calc(100% - 10px) 0%,
      100% 10px,
      100% calc(100% - 10px),
      calc(100% - 10px) 100%,
      10px 100%,
      0% calc(100% - 10px),
      0% 10px
    );
}

.waiting-content h2 {
    font-size: xx-large;
    font-weight: normal;
    margin-bottom: 0.5rem;
}

.waiting-goat {
    width: 150px;
    height: auto;
    margin-bottom: 0.5rem;
}
/* ... */

